<resources>
    <string name="app_name">Basic</string>
    <string name="title_password">Password</string>
    <string name="title_email_id">Email</string>
    <string name="button_sign">Login</string>
    <string name="email_error">Please enter a valid email address.</string>
    <string name="password_error">Incorrect Password. Password must be of 6 digits. Ex: 123456</string>
    <string name="all_fields_required">Please fill in all the required fields.</string>
    <string name="valid_email_required">Please enter a valid email address.</string>

    <!--dashboard-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="maintenance">Maintenance</string>
    <string name="parcel">Parcel</string>
    <string name="resources">Resources</string>
    <string name="events">Events</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="parcel_list">Parcel List</string>
    <string name="filter">Filter</string>
    <string name="no_data_found">No record found.</string>
    <string name="collected">Collected</string>
    <string name="parcel_for_collection">Parcel for Collection</string>
    <string name="parcel_type">PARCEL TYPE</string>
    <string name="shipping_type">SHIPPING TYPE</string>
    <string name="receipt_date">RECEIPT DATE</string>
    <string name="issue_date">ISSUE DATE</string>
    <string name="forwarding_address">FORWARDING ADDRESS</string>
    <string name="tracking_no">TRACKING NO.</string>
    <string name="comments_from_admin">COMMENTS FROM ADMIN</string>
    <string name="some_error">Something went wrong, please try again later.</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="please_check_internet">Internet connection error. Please try again.</string>
    <string name="cancel_text">Cancel</string>
    <string name="retry_text">Retry</string>
    <string name="returned">Returned</string>
    <string name="forward">Forwarded</string>
    <string name="parcel_detail">Parcel Detail</string>
    <string name="resource_list">Resource List</string>
    <string name="resource_detail">Resource Detail</string>
    <string name="book_resource">Book a Resource</string>

    <string name="invalid_user_credentails">Either username or password doesn\'t match in the system.</string>
    <string name="alert_title">Alert</string>
    <string name="alert_yes_button_text">Yes</string>
    <string name="alert_no_button_text">No</string>
    <string name="internet_connection_error">Please check your internet connection.</string>
    <string name="internet_connection_title">Connection Error</string>
    <string name="all">All</string>
    <string name="sure_want_logout">Are you sure you want to logout?</string>
    <string name="job_submitted">Job Submitted</string>
    <string name="date_reported">DATE REPORTED</string>
    <string name="date_closed">DATE CLOSED</string>
    <string name="status_of_job">STATUS OF THE JOB</string>
    <string name="category">CATEGORY</string>
    <string name="category_label">CATEGORY %s</string>
    <string name="description_label">DESCRIPTION %s</string>
    <string name="description">DESCRIPTION</string>
    <string name="cause_label">CAUSE %s</string>
    <string name="cause">CAUSE</string>
    <string name="comments">COMMENTS</string>
    <string name="comments_label">COMMENTS %s</string>
    <string name="maintenance_note_by_student">I agree to allow a staff member into my room when I am not available</string>
    <string name="maintenance_detail">Maintenance Detail</string>
    <string name="maintenance_request_closed">This maintenance request has been cancelled successfully.</string>
    <string name="new_job">New Job</string>
    <string name="log_new_job">Log a maintenance job by completing the below form</string>
    <string name="please_select">Please Select</string>
    <string name="item">ITEM %s</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_cause">Enter Cause</string>
    <string name="enter_commetns">Enter Comments</string>
    <string name="not_available_in_room">I agree to allow a staff member into my room when I am not available</string>
    <string name="save_and_continue"><![CDATA[Save & Continue]]></string>
    <string name="resource_type_label">RESOURCE TYPE %s</string>
    <string name="resource_type">RESOURCE TYPE</string>
    <string name="resource_type_new">RESOURCE TYPE NEW</string>
    <string name="date_from">DATE FROM</string>
    <string name="date_to">DATE TO</string>
    <string name="select_date_time">Select Date &amp; Time</string>
    <string name="to">To %s</string>
    <string name="from">FROM %s</string>
    <string name="resoucre_type">RESOURCE TYPE %s</string>
    <string name="resoucre_name">RESOURCE NAME</string>
    <string name="location">LOCATION %s</string>
    <string name="select_resource">SELECT RESOURCE</string>
    <string name="search">Search</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="location_type">location type</string>
    <string name="avaible_screen">avaiblescreen</string>
    <string name="available_screen">available_screen</string>
    <string name="avaiable_resource">Available Resources</string>
    <string name="item_search">Item</string>
    <string name="bookedsuccessfully">New resource has been booked successfully.</string>
    <string name="book_resource_by_filling_up_below_form">Book a resource by completing the below form</string>
    <string name="request_submitted_successfully">New job has been added successfully.</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="please_select_resource">Select Resource</string>
    <string name="please_select_location">Select Location</string>
    <string name="sure_want_close_job">Are you sure you want to cancel your job?</string>
    <string name="no_record_found">No record found.</string>
    <string name="event_title">Event</string>
    <string name="select_from_date_first">You need to select From Date  first</string>
    <string name="select_to_date_first">You need to select To Date  first</string>
    <string name="no_resource_type">There is not any resource type available yet.</string>
    <string name="no_location_type">There is not any location alloted to you at this time.</string>
    <string name="both_date_same">From and To date-time cannot be same</string>
    <string name="form_date_greather_to_date">From date-time cannot be greater than To date-time</string>
    <string name="minhour">"You have to book a resource for atleast "</string>
    <string name="maxhour">"You cannot book this resource for more than "</string>
    <string name="from_date_current">"From date-time cannot be greater than Current date-time "</string>
    <string name="request">Do you want request this resource?</string>
    <string name="resource_first_type">You need to select Resource Type first.</string>
    <string name="no_resource_alloted">This Resource cannot be allotted to you.</string>
    <string name="speical_values_not_allowed">Special characters are not allowed. Special characters are &amp;,&lt;</string>
    <string name="need_to_select_category">Please select a category before proceed further.</string>
    <string name="enter_resource_name">Enter Resource Name</string>
    <string name="past_time">Time cannot be less than current time.</string>
    <string name="past_date">Date cannot be less than current date.</string>
    <string name="closed">Closed</string>
    <string name="username">username</string>
    <string name="select_resource_name">Select Resource Name</string>
    <string name="availabilitylisting">availability_screen</string>
    <string name="availability_heading">Sorry, there is/are no resource available yet. Please check resource name and their respective booked schedule.</string>
    <string name="availability_detail_screen">availability detail screen</string>
    <string name="book__rersource_detail">Booked Details</string>
    <string name="no_resources">There are no resources\' for this resource type.</string>

</resources>
