<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <com.basic.views.DwellHandsenTextView
                android:id="@+id/maintenance_new_job_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/log_new_job"
                android:textColor="@color/new_maintenance_title_color"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawable_cardview_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_category_label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/category"
                    android:textColor="@color/new_maintenance_title_color"
                    android:textSize="14sp" />

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_category_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_drawable_down_arrow"
                    android:gravity="left"
                    android:hint="@string/please_select"
                    android:textColor="@color/black_text_color"
                    android:textColorHint="@color/new_maintenance_edit_text_hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/divider_color_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawable_cardview_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_item_label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/item"
                    android:textColor="@color/new_maintenance_title_color"
                    android:textSize="14sp" />

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_item_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/ic_drawable_down_arrow"
                    android:gravity="left"
                    android:hint="@string/please_select"
                    android:textColor="@color/black_text_color"
                    android:textColorHint="@color/new_maintenance_edit_text_hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/divider_color_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/drawable_cardview_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_description_label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/description"
                    android:textColor="@color/new_maintenance_title_color"
                    android:textSize="14sp" />

                <com.basic.views.Dwelledittext
                    android:id="@+id/maintenance_new_job_description_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:gravity="left"
                    android:hint="@string/enter_commetns"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black_text_color"
                    android:textColorHint="@color/new_maintenance_edit_text_hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/divider_color_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="10dp">

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_cause_label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/cause"
                    android:textColor="@color/new_maintenance_title_color"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <com.basic.views.Dwelledittext
                    android:id="@+id/maintenance_new_job_cause_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:gravity="left"
                    android:maxLength="100"
                    android:hint="@string/enter_cause"
                    android:textColor="@color/black_text_color"
                    android:textColorHint="@color/new_maintenance_edit_text_hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/divider_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="10dp">

                <com.basic.views.DwellTextView
                    android:id="@+id/maintenance_new_job_comments_label_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/comments"
                    android:textColor="@color/new_maintenance_title_color"
                    android:textSize="14sp" />

                <com.basic.views.Dwelledittext
                    android:id="@+id/maintenance_new_job_comments_value_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:gravity="left"
                    android:maxLength="40"
                    android:hint="@string/enter_commetns"
                    android:textColor="@color/black_text_color"
                    android:textColorHint="@color/new_maintenance_edit_text_hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/divider_color" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <CheckBox
                    android:id="@+id/not_available_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:scaleX="1.30"
                    android:scaleY="1.30"
                    android:theme="@style/checkBoxStyle" />

                <com.basic.views.DwellTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@+id/not_available_check_box"
                    android:text="@string/not_available_in_room"
                    android:textColor="@color/new_maintenance_title_color"
                    android:textSize="16sp" />

            </RelativeLayout>

            <com.basic.views.Dwellbutton
                android:id="@+id/save_maintenance_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/drawable_round_corner_button_green_solid"
                android:text="@string/save_and_continue"
                android:textAllCaps="false"
                android:elevation="0dp"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>


</ScrollView>
</LinearLayout>