<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/drawable_cardview_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/parcel_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
        <View
            android:id="@+id/view_dotted_parcel_divider_title"
            android:layout_below="@+id/parcel_title_text_view"
            android:background="@drawable/drawable_dotted_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layerType="software" />

        <LinearLayout
            android:id="@+id/content_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parcel_title_text_view"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/parcel_type_label_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/parcel_type"
                        android:textColor="@color/parcel_item_label_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/parcel_type_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/parcel_type_label_text_view"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/login_edit_text_hint_color"
                        android:textSize="18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/receipt_date_label_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/receipt_date"
                        android:textColor="@color/parcel_item_label_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/receipt_date_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/receipt_date_label_text_view"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/login_edit_text_hint_color"
                        android:textSize="18sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/shipping_type_label_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/shipping_type"
                        android:textColor="@color/parcel_item_label_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/shipping_type_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/shipping_type_label_text_view"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/login_edit_text_hint_color"
                        android:textSize="18sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/issue_date_label_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/issue_date"
                        android:textColor="@color/parcel_item_label_color"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/issue_date_value_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/issue_date_label_text_view"
                        android:gravity="right"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/login_edit_text_hint_color"
                        android:textSize="18sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_linear_layout"
            android:id="@+id/parcel_status_background"
            android:background="@drawable/drawable_bottom_corner_round_bg_green">
            <TextView
                android:id="@+id/parcel_status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="OUT"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:gravity="left"
                android:textSize="20sp"/>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
